src/FhirServerHarness/Ucum/UCUMParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\UCUM.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
//[System.CLSCompliant(false)]
public partial class UCUMParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, NON_DIGIT_TERMINAL_UNIT_SYMBOL=14, 
		DIGIT_SYMBOL=15;
	public const int
		RULE_mainTerm = 0, RULE_term = 1, RULE_component = 2, RULE_annotatable = 3, 
		RULE_simpleUnit = 4, RULE_simpleUnitSymbols = 5, RULE_annotationSymbols = 6, 
		RULE_squareBracketsSymbols = 7, RULE_withinSbSymbol = 8, RULE_withinCbSymbol = 9, 
		RULE_withinCbOrSbSymbol = 10, RULE_terminalUnitSymbol = 11, RULE_exponent = 12, 
		RULE_digitSymbols = 13;
	public static readonly string[] ruleNames = {
		"mainTerm", "term", "component", "annotatable", "simpleUnit", "simpleUnitSymbols", 
		"annotationSymbols", "squareBracketsSymbols", "withinSbSymbol", "withinCbSymbol", 
		"withinCbOrSbSymbol", "terminalUnitSymbol", "exponent", "digitSymbols"
	};

	private static readonly string[] _LiteralNames = {
		null, "'/'", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", "' '", "'\"'", 
		"'+'", "'-'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "NON_DIGIT_TERMINAL_UNIT_SYMBOL", "DIGIT_SYMBOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "UCUM.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static UCUMParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public UCUMParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public UCUMParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainTermContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(UCUMParser.Eof, 0); }
		public MainTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainTerm; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterMainTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitMainTerm(this);
		}
	}

	[RuleVersion(0)]
	public MainTermContext mainTerm() {
		MainTermContext _localctx = new MainTermContext(Context, State);
		EnterRule(_localctx, 0, RULE_mainTerm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			term();
			State = 29;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ComponentContext component() {
			return GetRuleContext<ComponentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitTerm(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 2, RULE_term);
		try {
			State = 42;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 31;
				component();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 32;
				Match(T__0);
				State = 33;
				term();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 34;
				component();
				State = 35;
				Match(T__0);
				State = 36;
				term();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 38;
				component();
				State = 39;
				Match(T__1);
				State = 40;
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComponentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationSymbolsContext annotationSymbols() {
			return GetRuleContext<AnnotationSymbolsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotatableContext annotatable() {
			return GetRuleContext<AnnotatableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DigitSymbolsContext digitSymbols() {
			return GetRuleContext<DigitSymbolsContext>(0);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_component; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterComponent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitComponent(this);
		}
	}

	[RuleVersion(0)]
	public ComponentContext component() {
		ComponentContext _localctx = new ComponentContext(Context, State);
		EnterRule(_localctx, 4, RULE_component);
		try {
			State = 59;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44;
				Match(T__2);
				State = 45;
				term();
				State = 46;
				Match(T__3);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 48;
				Match(T__2);
				State = 49;
				term();
				State = 50;
				Match(T__3);
				State = 51;
				annotationSymbols();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 53;
				annotatable();
				State = 54;
				annotationSymbols();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 56;
				annotationSymbols();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 57;
				annotatable();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 58;
				digitSymbols();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotatableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SimpleUnitContext simpleUnit() {
			return GetRuleContext<SimpleUnitContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExponentContext exponent() {
			return GetRuleContext<ExponentContext>(0);
		}
		public AnnotatableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotatable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterAnnotatable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitAnnotatable(this);
		}
	}

	[RuleVersion(0)]
	public AnnotatableContext annotatable() {
		AnnotatableContext _localctx = new AnnotatableContext(Context, State);
		EnterRule(_localctx, 6, RULE_annotatable);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61;
				simpleUnit();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62;
				simpleUnit();
				State = 63;
				exponent();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SimpleUnitSymbolsContext[] simpleUnitSymbols() {
			return GetRuleContexts<SimpleUnitSymbolsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimpleUnitSymbolsContext simpleUnitSymbols(int i) {
			return GetRuleContext<SimpleUnitSymbolsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SquareBracketsSymbolsContext squareBracketsSymbols() {
			return GetRuleContext<SquareBracketsSymbolsContext>(0);
		}
		public SimpleUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterSimpleUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitSimpleUnit(this);
		}
	}

	[RuleVersion(0)]
	public SimpleUnitContext simpleUnit() {
		SimpleUnitContext _localctx = new SimpleUnitContext(Context, State);
		EnterRule(_localctx, 8, RULE_simpleUnit);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 67;
				simpleUnitSymbols();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 68;
				squareBracketsSymbols();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 69;
				squareBracketsSymbols();
				State = 70;
				simpleUnitSymbols();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 72;
				simpleUnitSymbols();
				State = 73;
				squareBracketsSymbols();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 75;
				simpleUnitSymbols();
				State = 76;
				squareBracketsSymbols();
				State = 77;
				simpleUnitSymbols();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleUnitSymbolsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TerminalUnitSymbolContext[] terminalUnitSymbol() {
			return GetRuleContexts<TerminalUnitSymbolContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TerminalUnitSymbolContext terminalUnitSymbol(int i) {
			return GetRuleContext<TerminalUnitSymbolContext>(i);
		}
		public SimpleUnitSymbolsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleUnitSymbols; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterSimpleUnitSymbols(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitSimpleUnitSymbols(this);
		}
	}

	[RuleVersion(0)]
	public SimpleUnitSymbolsContext simpleUnitSymbols() {
		SimpleUnitSymbolsContext _localctx = new SimpleUnitSymbolsContext(Context, State);
		EnterRule(_localctx, 10, RULE_simpleUnitSymbols);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 81;
					terminalUnitSymbol();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 84;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationSymbolsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WithinCbSymbolContext[] withinCbSymbol() {
			return GetRuleContexts<WithinCbSymbolContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WithinCbSymbolContext withinCbSymbol(int i) {
			return GetRuleContext<WithinCbSymbolContext>(i);
		}
		public AnnotationSymbolsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotationSymbols; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterAnnotationSymbols(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitAnnotationSymbols(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationSymbolsContext annotationSymbols() {
		AnnotationSymbolsContext _localctx = new AnnotationSymbolsContext(Context, State);
		EnterRule(_localctx, 12, RULE_annotationSymbols);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(T__4);
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 87;
				withinCbSymbol();
				}
				}
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 65438L) != 0) );
			State = 92;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SquareBracketsSymbolsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WithinSbSymbolContext[] withinSbSymbol() {
			return GetRuleContexts<WithinSbSymbolContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WithinSbSymbolContext withinSbSymbol(int i) {
			return GetRuleContext<WithinSbSymbolContext>(i);
		}
		public SquareBracketsSymbolsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_squareBracketsSymbols; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterSquareBracketsSymbols(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitSquareBracketsSymbols(this);
		}
	}

	[RuleVersion(0)]
	public SquareBracketsSymbolsContext squareBracketsSymbols() {
		SquareBracketsSymbolsContext _localctx = new SquareBracketsSymbolsContext(Context, State);
		EnterRule(_localctx, 14, RULE_squareBracketsSymbols);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(T__6);
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 95;
				withinSbSymbol();
				}
				}
				State = 98;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64638L) != 0) );
			State = 100;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WithinSbSymbolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WithinCbOrSbSymbolContext withinCbOrSbSymbol() {
			return GetRuleContext<WithinCbOrSbSymbolContext>(0);
		}
		public WithinSbSymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_withinSbSymbol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterWithinSbSymbol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitWithinSbSymbol(this);
		}
	}

	[RuleVersion(0)]
	public WithinSbSymbolContext withinSbSymbol() {
		WithinSbSymbolContext _localctx = new WithinSbSymbolContext(Context, State);
		EnterRule(_localctx, 16, RULE_withinSbSymbol);
		try {
			State = 105;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case NON_DIGIT_TERMINAL_UNIT_SYMBOL:
			case DIGIT_SYMBOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102;
				withinCbOrSbSymbol();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103;
				Match(T__4);
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 3);
				{
				State = 104;
				Match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WithinCbSymbolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WithinCbOrSbSymbolContext withinCbOrSbSymbol() {
			return GetRuleContext<WithinCbOrSbSymbolContext>(0);
		}
		public WithinCbSymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_withinCbSymbol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterWithinCbSymbol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitWithinCbSymbol(this);
		}
	}

	[RuleVersion(0)]
	public WithinCbSymbolContext withinCbSymbol() {
		WithinCbSymbolContext _localctx = new WithinCbSymbolContext(Context, State);
		EnterRule(_localctx, 18, RULE_withinCbSymbol);
		try {
			State = 111;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case NON_DIGIT_TERMINAL_UNIT_SYMBOL:
			case DIGIT_SYMBOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107;
				withinCbOrSbSymbol();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				Match(T__8);
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 3);
				{
				State = 109;
				Match(T__6);
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 4);
				{
				State = 110;
				Match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WithinCbOrSbSymbolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TerminalUnitSymbolContext terminalUnitSymbol() {
			return GetRuleContext<TerminalUnitSymbolContext>(0);
		}
		public WithinCbOrSbSymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_withinCbOrSbSymbol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterWithinCbOrSbSymbol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitWithinCbOrSbSymbol(this);
		}
	}

	[RuleVersion(0)]
	public WithinCbOrSbSymbolContext withinCbOrSbSymbol() {
		WithinCbOrSbSymbolContext _localctx = new WithinCbOrSbSymbolContext(Context, State);
		EnterRule(_localctx, 20, RULE_withinCbOrSbSymbol);
		try {
			State = 122;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NON_DIGIT_TERMINAL_UNIT_SYMBOL:
			case DIGIT_SYMBOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 113;
				terminalUnitSymbol();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114;
				Match(T__9);
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 3);
				{
				State = 115;
				Match(T__2);
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 4);
				{
				State = 116;
				Match(T__3);
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 5);
				{
				State = 117;
				Match(T__10);
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 6);
				{
				State = 118;
				Match(T__11);
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 7);
				{
				State = 119;
				Match(T__1);
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 8);
				{
				State = 120;
				Match(T__0);
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 9);
				{
				State = 121;
				Match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TerminalUnitSymbolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NON_DIGIT_TERMINAL_UNIT_SYMBOL() { return GetToken(UCUMParser.NON_DIGIT_TERMINAL_UNIT_SYMBOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT_SYMBOL() { return GetToken(UCUMParser.DIGIT_SYMBOL, 0); }
		public TerminalUnitSymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_terminalUnitSymbol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterTerminalUnitSymbol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitTerminalUnitSymbol(this);
		}
	}

	[RuleVersion(0)]
	public TerminalUnitSymbolContext terminalUnitSymbol() {
		TerminalUnitSymbolContext _localctx = new TerminalUnitSymbolContext(Context, State);
		EnterRule(_localctx, 22, RULE_terminalUnitSymbol);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			_la = TokenStream.LA(1);
			if ( !(_la==NON_DIGIT_TERMINAL_UNIT_SYMBOL || _la==DIGIT_SYMBOL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExponentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DigitSymbolsContext digitSymbols() {
			return GetRuleContext<DigitSymbolsContext>(0);
		}
		public ExponentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exponent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.EnterExponent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUCUMListener typedListener = listener as IUCUMListener;
			if (typedListener != null) typedListener.ExitExponent(this);
		}
	}
